k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-app
  labels:
    app: securebank
spec:
  replicas: 2   # 2 copies de l'app tournent en parallèle
  selector:
    matchLabels:
      app: securebank   # identifie quels pods appartiennent à ce Deployment
  template:
    metadata:
      labels:
        app: securebank  # doit correspondre au selector ci-dessus
    spec:
      containers:
        - name: securebank
          image: securebank:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "768Mi"
              cpu: "1000m"
          readinessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: 8080
            initialDelaySeconds: 90
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: tmp-volume
          emptyDir: {}
