k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securebank-db
  labels:
    app: securebank-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: securebank-db
  template:
    metadata:
      labels:
        app: securebank-db
    spec:
      containers:
        - name: postgres
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
