k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: securebank-db
spec:
  type: ClusterIP
  selector:
    app: securebank-db
  ports:
    - port: 5432
      targetPort: 5432
