k8s/network-policy-app-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-egress
spec:
  podSelector:
    matchLabels:
      app: securebank
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: securebank-db
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
